[gd_scene load_steps=3 format=3 uid="uid://b2h3l3yvsfhvn"]

[ext_resource type="Script" path="res://game/scripts/cabaret_club_mode_screen.gd" id="1_74u6y"]
[ext_resource type="Theme" uid="uid://bywqqu0lkvhdn" path="res://game/ui/ccm_theme.tres" id="1_fmk1v"]

[node name="CabaretClubModeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fmk1v")
script = ExtResource("1_74u6y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.5
offset_top = -31.5
offset_right = 213.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="ClassicCabaretModeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "CLASSIC CABARET MODE"

[node name="BulletCabaretModeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "BULLET CABARET MODE"

[node name="VersusModeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "VERSUS MODE"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LoveCabaretModeButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LOVE CABARET"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GalleryButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "GALLERY"

[connection signal="pressed" from="HBoxContainer/ClassicCabaretModeButton" to="." method="_on_classic_cabaret_mode_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BulletCabaretModeButton" to="." method="_on_bullet_cabaret_mode_pressed"]
[connection signal="pressed" from="HBoxContainer/VersusModeButton" to="." method="_on_versus_mode_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/LoveCabaretModeButton" to="." method="_on_love_cabaret_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/GalleryButton" to="." method="_on_gallery_button_pressed"]
